# agent-executors

./: .gitignore  Cargo.toml
architectures/: README.md  cli.md  patch.md
crates/agent-executor/: Cargo.toml  README.md
crates/agent-executor/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cmd.rs  executor.rs  lib.rs
crates/cli/src/cmd/: policy.rs  process.rs  runner.rs  session.rs  shell.rs  tests.rs  types.rs
crates/cli/src/executor/: policy.rs  process.rs  runner.rs  session.rs  shell.rs  tests.rs  types.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: executor.rs  lib.rs
crates/core/src/error/: mod.rs  tools.rs
crates/patch/: Cargo.toml  README.md
crates/patch/src/: executor.rs  lib.rs  parser.rs  policy.rs  types.rs
