[package]
name = "agent-executor"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[features]
default = ["cli"]
cli = ["dep:agent-executor-cli"]

[dependencies]
agent-executor-core.workspace = true
agent-executor-cli = { workspace = true, optional = true }
