[package]
name = "agent-executor-patch"
version = "0.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
include.workspace = true

[dependencies]
agent-executor-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
